--- a/style.css
+++ b/style.css
@@ -29,9 +29,7 @@
   
   main {
     margin-left: 5rem;
-    padding: 1rem;
   }
-  
   .navbar {
     position: fixed;
     left: 0;
@@ -69,7 +67,7 @@
     filter: grayscale(100%) opacity(0.7);
     transition: var(--transition-speed);
   }
-  
+
   .nav-link:hover {
     filter: grayscale(0%) opacity(1);
     background: var(--bg-secondary);
@@ -77,7 +75,7 @@
   }
   
   
-  /* Rotation Effect */
+  /* l'éffet de rotation */
   
   .logo {
     font-weight: bold;
@@ -101,9 +99,10 @@
   }
   
   .navbar:hover .logo svg {
-    transform: rotate(360deg);
+    transform: rotate(0deg);
     transition: var(--transition-speed);
   }
+
   
   .link-text {
     display: none;
@@ -114,21 +113,49 @@
     width: 1.5rem;
     margin: 0 1.125rem;
   }
-  
-  .fa-primary {
-    color: cadetblue;
+  /*2eme bar de navigation*/
+  .navtwo {
+    padding: 0rem;
+    background-color: black; /*to fix*/
   }
-  
-  .fa-secondary {
-    color: blue;
+  .search-box {
+   /* transform: translate(-50%,-50%);*/
+    background: #2f3640;
+    height: 40px;
+    border-radius: 40px;
   }
-  
-  .fa-primary,
-  .fa-secondary {
-    transition: var(--transition-speed);
+  .search-btn {
+    color: var(--bg-primary);
+    float: right;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 400ms;
   }
-  
-  /* Version mobile*/
+  .search-text {
+    border:none;
+    background: none;
+    outline: none;
+    float: left;
+    padding: 0;
+    color: white;
+    font-size: 16px;
+    transition: 500ms;
+    line-height: 40px;
+    width: 240px;
+  }
+  .search-box:hover >.search-text {
+    width: 240px;
+    padding: 0 6px;
+  }
+  .search-box:hover >.search-btn {
+    background: white;
+  }
+  /*Rendre les pages responsive*/
+  /*Version mobile*/
   @media only screen and (max-width: 600px) {
     .navbar {
       bottom: 0;
