changement de la page d'accueil

--- a/style/style-contributions.css
+++ b/style/style-contributions.css
@@ -33,7 +33,7 @@
 
 /* Buttons */
 .btn1 {
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 400;
     background-color: #303054;
     color: #fff;
