last change to make images appear in github

--- a/css/style.css
+++ b/css/style.css
@@ -794,7 +794,7 @@ section{
 
 
 .footer{
-   background: url(../images/footer-bg.jpg) no-repeat;
+   background: url(../Images/footer-bg.jpg) no-repeat;
    background-size: cover;
    background-position: center;
 }
