--- a/css/groupes.css
+++ b/css/groupes.css
@@ -1,13 +1,15 @@
 :root {
     --main-color: #104a8e;
 }
+
 .titre {
     margin: 2rem;
 }
 
 body {
-    background-color: white;/**#4C78AB;**/
-    font-family:"Roboto", sans-serif;
+    background-color: white;
+    /**#4C78AB;**/
+    font-family: "Roboto", sans-serif;
 }
 
 h2 {
@@ -15,13 +17,14 @@ h2 {
 }
 
 .container {
-   padding: 32px;
+    padding: 32px;
 }
 
 .choix {
     display: flex;
     width: 400px;
     flex-direction: column;
+    justify-content: center;
 }
 
 .choix .option-box {
@@ -39,15 +42,18 @@ h2 {
 .choisi {
     background-color: var(--main-color);
     border-radius: 8px;
-    margin-bottom: 8px;
     color: white;
     position: relative;
     order: 0;
+    cursor: pointer;
+    padding: 5px 10px;
 }
 
 .choisi::after {
     content: "";
-    background: url(Images/arrow-down.svg);
+    /*dunno why it isn't working*/
+    background-image: "Images/arrow-down.svg";
+
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
@@ -58,15 +64,18 @@ h2 {
     transition: all 0.4s;
 }
 
-.choix .option-box.active /* sans espace ça veut dire que l'élément a besoin d'avoir les 2 classes*/ {
+.choix .option-box.active
+
+/* sans espace ça veut dire que l'élément a besoin d'avoir les 2 classes*/
+    {
     max-height: 120px;
     opacity: 1;
-    overflow-y: scroll ;
+    overflow-y: scroll;
 }
 
-.choix .option-box.active + .choisi::after {
-transform: rotateX(180deg);
-top: -6px;
+.choix .option-box.active+.choisi::after {
+    transform: rotateX(180deg);
+    top: -6px;
 }
 
 .choix .option-box::-webkit-scrollbar {
@@ -109,9 +118,8 @@ top: -6px;
 .selection .container {
 
     display: inline-flex
-
 }
 
 .chosisi a {
-    margin-left: 20px ;
+    margin-left: 20px;
 }
