--- a/css/groupes.css
+++ b/css/groupes.css
@@ -1,5 +1,6 @@
 :root {
     --main-color: #104a8e;
+    --secondary-color: #1f5696;
 }
 
 .titre {
@@ -7,8 +8,7 @@
 }
 
 body {
-    background-color: white;
-    /**#4C78AB;**/
+    background-color: var(--secondary-color);
     font-family: "Roboto", sans-serif;
 }
 
